[package]
name = "ftp"
version = "0.1.0"
authors = ["Connor Skees <connor1skees@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ftp"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
log = "0.4.11"
env_logger = { version = "0.7.1", default-features = false }

[dev-dependencies]
lazy_static = "1.4.0"
